SIS2-345: Place custom honeypot on homepage subscribe form

--- a/config/sync/block.block.breadcrumbs.yml
+++ b/config/sync/block.block.breadcrumbs.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - premium_core
+    - system
   theme:
     - sis
 _core:
@@ -19,4 +20,8 @@ settings:
   label: Brødkrummer
   label_display: '0'
   provider: premium_core
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: '/newsletter/*'
