SIS2-336: Remove Simple Block from options

--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -35,6 +35,7 @@ third_party_settings:
         'Inline blocks':
           - 'inline_block:accordion'
           - 'inline_block:quote'
+          - 'inline_block:basic'
       allowlisted_blocks: {  }
       restricted_categories:
         - Block
