--- a/config/sync/config_split.config_split.develop.yml
+++ b/config/sync/config_split.config_split.develop.yml
@@ -10,6 +10,7 @@ description: ''
 weight: 0
 folder: ../config/develop
 module:
+  admin_toolbar_tools: 0
   devel: 0
   devel_generate: 0
   webform_devel: 0
