--- a/config/sync/field.storage.node.field_institution.yml
+++ b/config/sync/field.storage.node.field_institution.yml
@@ -1,15 +1,16 @@
-uuid: d45c082f-bf89-471c-8da5-3538723ad4bc
+uuid: 69351774-a9b0-405f-9b1f-85fb814a6c79
 langcode: da
 status: true
 dependencies:
   module:
     - node
     - text
-id: node.field_time
-field_name: field_time
+id: node.field_institution
+field_name: field_institution
 entity_type: node
-type: text_long
-settings: {  }
+type: text
+settings:
+  max_length: 255
 module: text
 locked: false
 cardinality: 1
