--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -6,6 +6,7 @@ dependencies:
     - node.type.almanac
     - node.type.article
   module:
+    - metatag
     - node
     - profile
 id: organization
@@ -13,6 +14,7 @@ label: Organisation
 weight: 6
 is_admin: null
 permissions:
+  - 'administer meta tags'
   - 'create article content'
   - 'create organization profile'
   - 'delete own almanac content'
