--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -24,6 +24,7 @@ dependencies:
     - layout_builder
     - media
     - media_icons
+    - metatag
     - node
     - paragraphs
     - path
@@ -58,6 +59,7 @@ permissions:
   - 'add scheduled transitions node page'
   - 'administer atoms'
   - 'administer menu'
+  - 'administer meta tags'
   - 'administer nodes'
   - 'administer redirect settings'
   - 'administer redirects'
