--- a/config/sync/cookiebot.settings.yml
+++ b/config/sync/cookiebot.settings.yml
@@ -1,15 +1,15 @@
 _core:
   default_config_hash: yFE1nEOaD0XSv9vzdabMHPyYvo9An7fYVq_yAQgJK_I
 langcode: da
-cookiebot_cbid: ''
+cookiebot_cbid: b46580d4-dde4-4c54-a261-8ed78e812ee6
 cookiebot_block_cookies: true
 cookiebot_iab_enabled: false
 cookiebot_show_declaration: false
-cookiebot_show_declaration_node_path: ''
+cookiebot_show_declaration_node_path: /node/
 exclude_paths: ''
-exclude_admin_theme: false
-exclude_uid_1: false
+exclude_admin_theme: true
+exclude_uid_1: true
 message_placeholder_cookieconsent_optout_marketing_show: false
 message_placeholder_cookieconsent_optout_marketing:
-  value: 'Please <a href="!cookiebot_renew" class="cookieconsent-optout-marketing__cookiebot-renew">accept marketing-cookies</a> to view this embedded content from <a href="!cookiebot_from_src_url" target="_blank" class="cookieconsent-optout-marketing__from-src-url">!cookiebot_from_src_url</a>'
+  value: "<p>Please <a class=\"cookieconsent-optout-marketing__cookiebot-renew\" href=\"!cookiebot_renew\">accept marketing-cookies</a> to view this embedded content from <a class=\"cookieconsent-optout-marketing__from-src-url\" href=\"!cookiebot_from_src_url\" target=\"_blank\">!cookiebot_from_src_url</a></p>\r\n"
   format: full_html
