--- a/config/sync/core.entity_view_display.node.article.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.article.slideshow.yml
@@ -16,15 +16,19 @@ dependencies:
     - field.field.node.article.field_colophon_author
     - field.field.node.article.field_colophon_editor
     - field.field.node.article.field_colophon_photographer
+    - field.field.node.article.field_contact_person
+    - field.field.node.article.field_copy_sheet
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
     - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
+    - field.field.node.article.field_institution
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
     - field.field.node.article.field_location
+    - field.field.node.article.field_materials
     - field.field.node.article.field_media_downloads
     - field.field.node.article.field_season
     - field.field.node.article.field_section_bg_graphics
@@ -102,14 +106,18 @@ hidden:
   field_colophon_author: true
   field_colophon_editor: true
   field_colophon_photographer: true
+  field_contact_person: true
+  field_copy_sheet: true
   field_equipment: true
   field_factboxes: true
   field_files: true
   field_graphics: true
   field_header: true
+  field_institution: true
   field_list_date: true
   field_list_media: true
   field_location: true
+  field_materials: true
   field_media_downloads: true
   field_season: true
   field_section_bg_graphics: true
