--- a/config/sync/field.field.node.page.field_list_media.yml
+++ b/config/sync/field.field.node.page.field_list_media.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.storage.node.field_list_media
     - media.type.image
     - node.type.page
+  content:
+    - 'media:image:659ccb42-57dc-4973-8e51-e28246c24aee'
 _core:
   default_config_hash: ryN45WPoOAy060FQvZz-cqIoLnrRvVpDsAC9bxnslsI
 id: node.page.field_list_media
@@ -16,7 +18,10 @@ label: 'Liste media'
 description: 'Image used for meta tags and inline navigation'
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: 659ccb42-57dc-4973-8e51-e28246c24aee
+    weight: 0
 default_value_callback: ''
 settings:
   handler: 'default:media'
