SIS2-385: Pagination problem solving

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -484,6 +484,13 @@ form-select:
   dependencies:
     - core/drupal
 
+pager-overview:
+  version: VERSION
+  js:
+    dist/components/js/pager-overview.js: {}
+  dependencies:
+    - core/drupal
+
 searchfield:
   version: VERSION
   css:
