--- a/config/sync/core.entity_view_display.block_content.lexicon_overview.default.yml
+++ b/config/sync/core.entity_view_display.block_content.lexicon_overview.default.yml
@@ -16,7 +16,7 @@ content:
     type: lexicon_overview_form
     label: hidden
     settings:
-      view_mode: teaser
+      view_mode: list
     third_party_settings: {  }
     weight: 0
     region: content
