--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -25,7 +25,7 @@ third_party_settings:
     allow_custom: true
   layout_builder_restrictions:
     allowed_block_categories:
-      - Inline blocks
+      - 'Inline blocks'
     entity_view_mode_restriction:
       allowed_layouts:
         - layout_onecol
@@ -40,14 +40,14 @@ third_party_settings:
       restricted_categories:
         - Block
         - Bruger
-        - Chaos Tools
-        - Content fields
+        - 'Chaos Tools'
+        - 'Content fields'
         - Cookiebot
-        - Custom block types
+        - 'Custom block types'
         - Devel
         - Forms
         - Help
-        - Lists (Views)
+        - 'Lists (Views)'
         - Menus
         - Premium
         - Skoven-i-Skolen
