--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -104,12 +104,16 @@ hidden:
   field_colophon_author: true
   field_colophon_editor: true
   field_colophon_photographer: true
+  field_contact_person: true
+  field_copy_sheet: true
   field_equipment: true
   field_factboxes: true
   field_files: true
   field_graphics: true
   field_header: true
+  field_institution: true
   field_location: true
+  field_materials: true
   field_media_downloads: true
   field_season: true
   field_section_bg_graphics: true
