--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
@@ -6,6 +6,7 @@ core_version_requirement: ^8 || ^9
 
 dependencies:
   - entity_overview:entity_overview
+  - atoms:atoms
 
 interface translation project: sis_lexicon
 interface translation server pattern: modules/custom/sis_lexicon/translations/%language.po
