--- a/config/sync/workbench_email.workbench_email_template.article_submitted.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_submitted.yml
@@ -1,23 +1,18 @@
 uuid: d1094839-14f0-49b9-8e2f-cd0f19d665f6
 langcode: da
 status: true
-dependencies:
-  config:
-    - user.role.editor
-    - user.role.webmaster
+dependencies: {  }
 id: article_submitted
 label: 'Artikel indsendt'
-format: null
+format: plain_text
 subject: 'Ny artikel: [node:title] '
 recipient_types:
-  roles_with_access:
-    id: roles_with_access
+  fixed_email:
+    id: fixed_email
     provider: workbench_email
     status: true
     settings:
-      roles:
-        editor: editor
-        webmaster: webmaster
+      recipients: skoven-i-skolen@nst.dk
 bundles: {  }
 body:
   value: "En artikel afventer godkendelse\r\n\r\nSe artiklen [node:url]"
