SIS2-384 and SIS2-381: Make changes to node add form for anonymous and green org users, hide block when no dots on map exist for profile

--- a/config/sync/block.block.adminimal_theme_login.yml
+++ b/config/sync/block.block.adminimal_theme_login.yml
@@ -3,6 +3,8 @@ langcode: da
 status: true
 dependencies:
   module:
+    - mobile_detect
+    - system
     - user
   theme:
     - adminimal_theme
@@ -19,4 +21,12 @@ settings:
   label: 'Log ind'
   label_display: visible
   provider: user
-visibility: {  }
+visibility:
+  mobile_detect_device_type:
+    id: mobile_detect_device_type
+    negate: null
+    devices: {  }
+  request_path:
+    id: request_path
+    negate: true
+    pages: '/node/add/*'
