--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -29,3 +29,4 @@ permissions:
   - 'use text format basic_html'
   - 'view any organization profile'
   - 'view media'
+  - 'view the administration theme'
